--- a/templates/source.html
+++ b/templates/source.html
@@ -58,6 +58,10 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
 </head>
 
 <body>
+    <div class="noscript" id="noscript">
+            <img src="{{ url_for('static',filename='images/error.png') }}">
+            <h1>ExtAnalysis needs javascript enabled to work!</h1>
+    </div>
     <div class="wrapper">
         <!--
         <h2>ExtAnalysis</h2>
