--- a/templates/report.html
+++ b/templates/report.html
@@ -57,6 +57,10 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
   </style>
 </head>
 <body>
+  <div class="noscript" id="noscript">
+            <img src="{{ url_for('static',filename='images/error.png') }}">
+            <h1>ExtAnalysis needs javascript enabled to work!</h1>
+  </div>
   <div class="logo-placeholder"><a href='/'><img src="{{ url_for('static',filename='images/logo.png') }}" class="logo" id="logo"></a></div>
   <a href="#" id="lightSwitchOn" onclick="lightsOn()" class="dmode day" title="Enable Light Mode"><img src="{{ url_for('static',filename='images/light.svg') }}" style="width:27px;"></a>
   <a href="#" id="lightSwitchOff" onclick="lightsOff()" class="dmode night" title="Enable Dark Mode"><img src="{{ url_for('static',filename='images/dark.svg') }}" style="width:27px;"></a>
