--- a/static/css/style.css
+++ b/static/css/style.css
@@ -230,7 +230,7 @@ h6 {
   padding: 24px;
   margin-top: 21px;
   border: solid 1px #eee;
-  overflow: auto;
+  /** overflow: auto; **/
   position: relative;
 }
 .target_box{
@@ -1111,10 +1111,7 @@ div#loading {
   text-align: left;
   padding-left: 13px;
   /* border: solid 1px #d6d6d6; */
-  background: #f9f9f9c7;
-  border-left: solid 2px #3e96fa;
   margin-bottom: 17px;
-  /* box-shadow: 0px 0px 7px 3px #eeeeeeb5; */
 }
 
 .option_name {
@@ -1516,9 +1513,11 @@ li.jsontree_node {
 .sub-head-settings {
   text-align: left;
   color: #000;
-  font-size: 15px;
+  font-weight: bold;
+  font-size: 14px;
   text-transform: uppercase;
   letter-spacing: 1px;
+  display: inline-block;
   padding-bottom: 5px;
 }
 
@@ -1662,4 +1661,67 @@ a.hreflink {
   background-color: rgb(255, 90, 90);
   color: #ffffff;
   letter-spacing: 2px;
+}
+
+.sub-head-settingss {
+  display: inline-block;
+  color: #d0d0d0;
+  letter-spacing: 1px;
+  text-transform: capitalize;
+}
+
+.switch {
+  position: relative;
+  margin-left: 5px;
+  display: inline-block;
+}
+
+.switch-input {
+  display: none;
+}
+
+.switch-label {
+  display: block;
+  width: 44px;
+  height: 14px;
+  cursor: pointer;
+  padding-top: 2px;
+  text-indent: -150%;
+  clip: rect(0 0 0 0);
+  color: transparent;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+.switch-label:before,
+.switch-label:after {
+  content: "";
+  display: block;
+  position: absolute;
+  cursor: pointer;
+}
+.switch-label:before {
+  width: 100%;
+  height: 100%;
+  background-color: #b5b5b5;
+  border-radius: 9999em;
+  transition: background-color 0.25s ease;
+}
+.switch-label:after {
+  top: 0;
+  left: 0;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background-color: #fff;
+  box-shadow: 0 0 2px rgba(0, 0, 0, 0.45);
+  transition: left 0.25s ease;
+}
+
+.switch-input:checked + .switch-label:before {
+  background-color: #39bb00;
+}
+.switch-input:checked + .switch-label:after {
+  left: 24px;
 }
