--- a/templates/index.html
+++ b/templates/index.html
@@ -242,7 +242,7 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
                     <table style="border-spacing: 4px 9px;">
                         <tr>
                             <td><i class="fas fa-comment-alt"></i> Comments:</td>
-                            <td><span class="hint--bottom hint--bounce hint--rounded hint--large" aria-label="Set this to false if you want to analyze css files. Disabled by default as css files contain a lot of junk!"><i class="fas fa-question-circle"></i></span></td>
+                            <td><span class="hint--bottom hint--bounce hint--rounded hint--large" aria-label="Set it to false if you want to skip extracting comments from files"><i class="fas fa-question-circle"></i></span></td>
                             <td>
                                 <div class="switch">
                                     <input id="extract_comments" type="checkbox" class="switch-input">
@@ -301,6 +301,27 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
                             </td>
                         </tr>
                     </table>
+                    <br>
+                    <div class="sub-head-settings">
+                        Other Scan Settings
+                    </div>
+                    <div class="option_description">
+                        Miscellaneous scan options! 
+                    </div>
+                    <br>
+                    <table style="border-spacing: 4px 9px;">
+                        <tr>
+                            <td><i class="fab fa-css3-alt"></i> Ignore CSS Files:</td>
+                            <td><span class="hint--bottom hint--bounce hint--rounded hint--large" aria-label="Set this to false if you want to analyze css files. Disabled by default as css files contain a lot of junk!"><i class="fas fa-question-circle"></i></span></td>
+                            <td>
+                                <div class="switch">
+                                    <input id="ignore_css" type="checkbox" class="switch-input">
+                                    <label for="ignore_css" class="switch-label">Switch</label>
+                                </div>
+                            </td>
+                        </tr>
+                    </table>
+                    <br>
                     <br>
                     <button class="start_scan" onclick=updateIntelExtraction()><i class="fas fa-check"></i> Save Settings</button>
                 </div>
@@ -419,6 +440,10 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
 
             if (settings['extract_ipv6_addresses'] === true){
                 $('#extract_ipv6_addresses')[0].checked = true;
+            }
+
+            if (settings['ignore_css'] === true){
+                $('#ignore_css')[0].checked = true;
             }
 
         
