--- a/templates/index.html
+++ b/templates/index.html
@@ -155,7 +155,7 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
                         <div class="pill-container">
                             <div class="pill gchrome" onclick="getLocalExtensions('googlechrome')"><i class="fab fa-chrome"></i> Google Chrome</div>
                             <div class="pill mfirefox" onclick="getLocalExtensions('firefox')"><i class="fab fa-firefox"></i> Mozilla Firefox</div>
-                            <div class="pill opera" onclick="getLocalOperaExtensions()"><i class="fab fa-opera"></i> Opera Browser</div>
+                            <div class="pill opera" onclick="getLocalExtensions('brave')"><i class="fab fa-chrome"></i> Brave Browser</div>
                         </div>
                         
                         <div id="local-list" style="margin-top:5px;"></div>
