:pencil2: Address issue #26

--- a/templates/index.html
+++ b/templates/index.html
@@ -145,7 +145,7 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
                     </div>
                     
                     <br><br>
-                    <div class="inline-note">You can either enter the extension id or the full url of the chrome webstore.</div>
+                    <div class="inline-note">You can either enter the extension id or the full url of the Firefox Addon listing.</div>
                 </div>
 
                 <div id="tab-1" class="tab-content">
