:sparkles: Added support for scanning local vivaldi extensions (issue #20)

--- a/templates/index.html
+++ b/templates/index.html
@@ -156,6 +156,7 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
                             <div class="pill gchrome" onclick="getLocalExtensions('googlechrome')"><i class="fab fa-chrome"></i> Google Chrome</div>
                             <div class="pill mfirefox" onclick="getLocalExtensions('firefox')"><i class="fab fa-firefox"></i> Mozilla Firefox</div>
                             <div class="pill opera" onclick="getLocalExtensions('brave')"><i class="fab fa-chrome"></i> Brave Browser</div>
+                            <div class="pill opera" onclick="getLocalExtensions('vivaldi')"><i class="fab fa-chrome"></i> Vivaldi Browser</div>
                         </div>
                         
                         <div id="local-list" style="margin-top:5px;"></div>
