added tar support

--- a/templates/index.html
+++ b/templates/index.html
@@ -175,7 +175,7 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
                         <button class="start_scan" onclick="upload_extension()"><i class="fas fa-bolt"></i> Upload & Analyze</button>
                     </div>
                     <br><br>
-                    <div class="inline-note">Allowed file extensions: <b>.crx</b>, <b>.xpi</b>, <b>.zip</b></div>
+                    <div class="inline-note">Allowed file extensions: <b>.crx</b>, <b>.xpi</b>, <b>.zip</b>, <b>.tar</b>, <b>.gzip</b></div>
                 </div>
                     
                 </div>
