:sparkles: Added support for local Opera plugins in mac

--- a/templates/index.html
+++ b/templates/index.html
@@ -157,6 +157,7 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
                             <div class="pill mfirefox" onclick="getLocalExtensions('firefox')"><i class="fab fa-firefox"></i> Mozilla Firefox</div>
                             <div class="pill opera" onclick="getLocalExtensions('brave')"><i class="fab fa-chrome"></i> Brave Browser</div>
                             <div class="pill opera" onclick="getLocalExtensions('vivaldi')"><i class="fab fa-chrome"></i> Vivaldi Browser</div>
+                            <div class="pill opera" onclick="getLocalExtensions('opera')"><i class="fab fa-opera"></i> Opera</div>
                         </div>
                         
                         <div id="local-list" style="margin-top:5px;"></div>
